Closed Bug 1780199 Opened 2 years ago Closed 2 years ago

accesskey on <input type="file"> does not open a filerequester

Categories

(Core :: DOM: Core & HTML, defect)

Firefox 102
defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox105 --- fixed

People

(Reporter: wegegeld, Assigned: emilio)

References

Details

Attachments

(3 files)

Steps to reproduce:

<!DOCTYPE html>
<html>
<body>

<form><input id="loadfile" type="file" accesskey="l" >
</form>

</body>
</html>

Actual results:

after loading this page, the element gets the focus after pressing alt+shift+l

Expected results:

a file requester should apear

The Bugbug bot thinks this bug should belong to the 'Core::Layout: Form Controls' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Layout: Form Controls
Product: Firefox → Core

[I think accesskey handling is under DOM's purview, not layout. Reclassifying]

Status: UNCONFIRMED → NEW
Component: Layout: Form Controls → DOM: Core & HTML
Ever confirmed: true

Here's a testcase with a handful of other form-fields, with a console.log() entry when any element is "clicked" (or activated via accesskey).

Every element except for the input type="file" does indeed trigger a log entry, so there's something uniquely broken about input type="file" where it's not "clicking" when accesskey-activated, it seems. (It's just being focused.)

(Side note: input type="color" seems to have an unrelated issue where it logs but declines to show the popup because it thinks the action didn't come from the user, per an error that shows up in the console. I'll file a separate bug on that.)

See Also: → 1782380

By not propagating to the inner button. This probably broke with
bug 505355 since it made the button not focusable.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: