Bug 1780199 - Fix accesskey on file input. r=edgar

By not propagating to the inner button. This probably broke with
bug 505355 since it made the button not focusable.

Differential Revision: https://phabricator.services.mozilla.com/D153321